Fixed min width on iOS devices

--- a/website/content/themes/vote-denton/style.less
+++ b/website/content/themes/vote-denton/style.less
@@ -28,6 +28,10 @@
 @import 'css/layout.less';
 @import 'css/variables.less';
 
+html {
+    min-width: 475px;
+}
+
 /*
  * Base
  ***********************************************************/
